# cfai

./: .env.example  .gitignore  Cargo.toml  INTERACTIVE_GUIDE.md  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md
.github/workflows/: release.yml
scripts/: install.sh  update.sh
src/: main.rs
src/ai/: analyzer.rs  executor.rs  mod.rs  prompts.rs
src/api/: analytics.rs  cache.rs  client.rs  dns.rs  firewall.rs  mod.rs  page_rules.rs  ssl.rs  workers.rs  zone.rs
src/cli/: output.rs
src/cli/commands/: ai.rs  analytics.rs  cache.rs  config.rs  dns.rs  firewall.rs  install.rs  interactive.rs  mod.rs  page_rules.rs  self_update.rs  ssl.rs  update.rs  workers.rs  zone.rs
src/config/: settings.rs
src/gui/: async_bridge.rs  mod.rs  router.rs  state.rs  theme.rs
src/gui/pages/: ai_assistant.rs  analytics.rs  cache.rs  config.rs  dashboard.rs  dns.rs  firewall.rs  mod.rs  page_rules.rs  ssl.rs  workers.rs  zone.rs
src/gui/widgets/: confirm_dialog.rs  mod.rs  notification.rs  status_bar.rs
src/models/: analytics.rs  cache.rs  common.rs  dns.rs  firewall.rs  mod.rs  page_rules.rs  ssl.rs  workers.rs  zone.rs
